--- a/assets/scss/components/_testimonials.scss
+++ b/assets/scss/components/_testimonials.scss
@@ -27,7 +27,8 @@
 
     .testimonials__entry-text {
       @include media-breakpoint-up(lg) {
-        @include aspect-ratio(400, 160);
+        // @include aspect-ratio(400, 160);
+        // @include aspect-ratio(400, 260);
 
         overflow: hidden;
 
@@ -38,7 +39,8 @@
       }
 
       @include media-breakpoint-up(xl) {
-        @include aspect-ratio(400, 160);
+        // @include aspect-ratio(400, 160);
+        // @include aspect-ratio(400, 260);
 
         &.font-size-3 {
           font-size: 1.1rem;
@@ -99,13 +101,13 @@
 
   @include media-breakpoint-up(lg) {
     font-size: 8rem;
-    top: -9%;
+    top: -5%;
     padding-bottom: 2.5rem;
   }
 
   @include media-breakpoint-up(xl) {
     font-size: 13rem;
-    top: -11%;
+    top: -9.5%;
     padding-bottom: 4.5rem;
   }
 }
@@ -135,6 +137,8 @@
 }
 
 .testimonials__entry-img {
+  width: 100%;
+
   @include media-breakpoint-down(md) {
     @include aspect-ratio(1, 1);
   }
@@ -240,4 +244,12 @@
       pointer-events: all;
     }
   }
+}
+
+.testimonials__entry-quote-wrapper {
+  padding-bottom: spacing(16);
+}
+
+.testimonials__entry-text-wrapper {
+  margin-bottom: spacing(10);
 }
